Updated country name Türkiye

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1548,7 +1548,7 @@
       "zoneName": "Tonga"
     },
     "TR": {
-      "zoneName": "Turkey"
+      "zoneName": "Türkiye"
     },
     "TT": {
       "zoneName": "Trinidad and Tobago"
