fixed incorrect pointers in aria labels

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -31,7 +31,8 @@
     "privacy-policy": "Privacy Policy",
     "legal-notice": "Legal Notice",
     "api": "Access the API",
-    "docs": "API documentation"
+    "docs": "API documentation",
+    "chat-with-us": "Chat with Us"
   },
   "mobile-main-menu": {
     "map": "Electricity Maps",
