--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -21,7 +21,8 @@
     "privacy-policy": "Politique de confidentialité",
     "legal-notice": "Informations légales",
     "api": "Accéder à l'API",
-    "docs": "Documentation de l'API "
+    "docs": "Documentation de l'API ",
+    "chat-with-us": "Discuter avec nous"
   },
   "settings-modal": {
     "title": "Paramètres",
