Fix US zone translations across multiple languages, from Contiguous United States to just United States

--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -1300,7 +1300,7 @@
       "zoneName": "King Island"
     },
     "US": {
-      "zoneName": "Zusammenhängende Vereinigte Staaten"
+      "zoneName": "Vereinigte Staaten"
     },
     "US-CAL-BANC": {
       "countryName": "Vereinigte Staaten",
