--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -1275,7 +1275,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Estados Unidos contiguos"
+      "zoneName": "Estados Unidos"
     },
     "US-CAL-BANC": {
       "countryName": "Estados Unidos",
