--- a/web/src/locales/et.json
+++ b/web/src/locales/et.json
@@ -1152,7 +1152,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Külgnevad Ameerika Ühendriigid"
+      "zoneName": "Ameerika Ühendriigid"
     },
     "US-CAL-BANC": {
       "countryName": "Ameerika Ühendriigid",
