--- a/web/src/locales/nl.json
+++ b/web/src/locales/nl.json
@@ -526,7 +526,7 @@
       "zoneName": "Yukon"
     },
     "US": {
-      "zoneName": "Aaneengesloten Verenigde Staten"
+      "zoneName": "Verenigde Staten"
     },
     "US-CAL-CISO": {
       "countryName": "VS",
