--- a/web/src/locales/pt-BR.json
+++ b/web/src/locales/pt-BR.json
@@ -1150,7 +1150,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Estados Unidos da América Contíguos"
+      "zoneName": "Estados Unidos da América"
     },
     "US-CAL-BANC": {
       "countryName": "Estados Unidos da América",
