--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -1437,7 +1437,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Estados Unidos da América Contíguos"
+      "zoneName": "Estados Unidos da América"
     },
     "US-AK": {
       "countryName": "USA",
