--- a/web/src/locales/el.json
+++ b/web/src/locales/el.json
@@ -1077,7 +1077,7 @@
       "zoneName": "Ουγκάντα"
     },
     "US": {
-      "zoneName": "συνεχόμενες Ηνωμένες Πολιτείες"
+      "zoneName": "Ηνωμένες Πολιτείες"
     },
     "US-CAL-BANC": {
       "countryName": "Ηνωμένες Πολιτείες Αμερικής",
