--- a/web/src/locales/fi.json
+++ b/web/src/locales/fi.json
@@ -1121,7 +1121,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Vierekkäiset Yhdysvallat"
+      "zoneName": "Yhdysvallat"
     },
     "US-CAL-BANC": {
       "countryName": "Yhdysvallat",
