--- a/web/src/locales/id.json
+++ b/web/src/locales/id.json
@@ -1121,7 +1121,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Amerika Serikat yang bersebelahan"
+      "zoneName": "Amerika Serikat"
     },
     "UY": {
       "zoneName": "Uruguay"
