--- a/web/src/locales/it.json
+++ b/web/src/locales/it.json
@@ -1225,7 +1225,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Contigui Stati Uniti d'America"
+      "zoneName": "Stati Uniti d'America"
     },
     "US-CAL-BANC": {
       "countryName": "Stati Uniti d'America",
