--- a/web/src/locales/no-NB.json
+++ b/web/src/locales/no-NB.json
@@ -1307,7 +1307,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Det kontinentale USA"
+      "zoneName": "USA"
     },
     "US-AK": {
       "countryName": "USA",
