--- a/web/src/locales/sl.json
+++ b/web/src/locales/sl.json
@@ -1220,7 +1220,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Celinske Združene Države"
+      "zoneName": "Združene Države"
     },
     "US-AK": {
       "countryName": "ZDA",
