Fix zoneName in sv.json to 'USA' as requested

--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -1570,8 +1570,8 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Förenta staterna - USA",
-      "seoZoneName": "Förenta staterna - USA"
+      "zoneName": "USA",
+      "seoZoneName": "USA"
     },
     "US-AK": {
       "countryName": "USA",
