--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -1571,7 +1571,7 @@
     },
     "US": {
       "zoneName": "USA",
-      "seoZoneName": "USA"
+      "seoZoneName": "Förenta staterna - USA"
     },
     "US-AK": {
       "countryName": "USA",
