--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -1570,7 +1570,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Kontinentala USA",
+      "zoneName": "USA",
       "seoZoneName": "Förenta staterna - USA"
     },
     "US-AK": {
