--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -812,7 +812,7 @@
       "zoneName": "Egypte"
     },
     "EH": {
-      "zoneName": "Sahara Occidental"
+      "zoneName": "Sahara occidental"
     },
     "ER": {
       "zoneName": "Érythrée"
