--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -172,32 +172,24 @@
     "submit": "Submit"
   },
   "estimation-badge": {
-    "partially-estimated": "Partially estimated",
-    "fully-estimated": "Estimated",
     "outage": "Unavailable"
   },
   "estimation-card": {
     "link": "Read about our estimation models",
     "outage-details": "See details",
+    "synthetic": "Synthetic",
+    "preliminary": "Preliminary",
     "ESTIMATED_FORECASTS_HIERARCHY": {
       "title": "Data is preliminary",
-      "pill": "Preliminary",
       "body": "The data for this hour has not yet been reported. Our models fill these gaps, providing a complete, granular dataset in real time."
     },
     "ESTIMATED_TIME_SLICER_AVERAGE": {
       "title": "Data is preliminary",
-      "pill": "Preliminary",
       "body": "The data for this hour has not yet been reported. Our models fill these gaps, providing a complete, granular dataset in real time."
     },
     "ESTIMATED_MODE_BREAKDOWN": {
       "title": "Data is partially estimated",
-      "pill": "Partially estimated",
       "body": "The reported data for this zone is incomplete; our models fill in missing production modes and electricity flows to provide a complete view of the flow-traced electricity mix."
-    },
-    "estimated_generic_method": {
-      "title": "Data is estimated",
-      "pill": "Imprecise",
-      "body": "The published data for this zone is unavailable or incomplete. The data shown on the map is estimated using our best effort, but might differ from the actual values."
     },
     "ESTIMATED_GENERAL_PURPOSE_ZONE_MODEL": {
       "title": "Data is always estimated",
@@ -215,6 +207,7 @@
     },
     "aggregated": {
       "title": "Data is aggregated",
+      "pill": "Aggregated",
       "body": "The data consists of an aggregation of hourly values."
     },
     "aggregated_estimated": {
