--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -211,7 +211,7 @@
     "72h": "72h",
     "3mo": "90 jours",
     "12mo": "12 mois",
-    "all_months": "Tout les mois",
+    "all_months": "Tous les mois",
     "all_years": "Toutes les années",
     "navigate": "Naviguer",
     "live": "Live",
