--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -217,6 +217,7 @@
     }
   },
   "time-controller": {
+    "24h": "24 hours",
     "72h": "72 hours",
     "3mo": "90 days",
     "12mo": "12 months",
@@ -250,6 +251,7 @@
   },
   "country-history": {
     "carbonintensity": {
+      "24h": "5-minute carbon intensity",
       "72h": "Hourly carbon intensity",
       "3mo": "Daily carbon intensity",
       "12mo": "Monthly carbon intensity",
@@ -257,6 +259,7 @@
       "all_years": "Yearly carbon intensity"
     },
     "emissions": {
+      "24h": "5-minute carbon emissions",
       "72h": "Hourly carbon emissions",
       "3mo": "Daily carbon emissions",
       "12mo": "Monthly carbon emissions",
@@ -264,6 +267,7 @@
       "all_years": "Yearly carbon emissions"
     },
     "emissionsorigin": {
+      "24h": "5-minute carbon emission origin",
       "72h": "Hourly carbon emission origin",
       "3mo": "Daily carbon emission origin",
       "12mo": "Monthly carbon emission origin",
@@ -271,6 +275,7 @@
       "all_years": "Yearly carbon emission origin"
     },
     "emissionsproduction": {
+      "24h": "5-minute production emissions",
       "72h": "Hourly production emissions",
       "3mo": "Daily production emissions",
       "12mo": "Monthly production emissions",
@@ -278,6 +283,7 @@
       "all_years": "Yearly production emissions"
     },
     "electricityorigin": {
+      "24h": "5-minute electricity mix",
       "72h": "Hourly electricity mix",
       "3mo": "Daily electricity mix",
       "12mo": "Monthly electricity mix",
@@ -285,6 +291,7 @@
       "all_years": "Yearly electricity mix"
     },
     "electricityproduction": {
+      "24h": "5-minute electricity mix",
       "72h": "Hourly electricity mix",
       "3mo": "Daily electricity mix",
       "12mo": "Monthly electricity mix",
@@ -292,6 +299,7 @@
       "all_years": "Yearly electricity mix"
     },
     "electricityprices": {
+      "24h": "5-minute electricity prices",
       "72h": "Hourly electricity prices",
       "3mo": "Daily electricity prices",
       "12mo": "Monthly electricity prices",
@@ -299,6 +307,7 @@
       "all_years": "Yearly electricity prices"
     },
     "netExchange": {
+      "24h": "5-minute electricity net flow",
       "72h": "Hourly electricity net flow",
       "3mo": "Daily electricity net flow",
       "12mo": "Monthly electricity net flow",
@@ -306,6 +315,7 @@
       "all_years": "Yearly electricity net flow"
     },
     "electricityLoad": {
+      "24h": "5-minute electricity load",
       "72h": "Hourly electricity load",
       "3mo": "Daily electricity load",
       "12mo": "Monthly electricity load",
