add experimental disclaimer

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -159,7 +159,9 @@
   },
   "grid-alerts-card": {
     "show-more": "Show more",
-    "show-less": "Show less"
+    "show-less": "Show less",
+    "experimental-mode": "This is free while in experimental mode",
+    "tooltip": "This feature is currently in experimental phase and available at no additional cost while we gather feedback and refine the functionality."
   },
   "feedback-card": {
     "title": "Help us improve!",
