Use shorter copy for experimental card

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1,8 +1,8 @@
 {
   "experiment": {
     "5min": {
-      "title": "New feature: 5-minute resolution",
-      "description": "The 5-minute resolution feature is currently in experimental phase and available at no additional cost while we gather feedback and refine the functionality."
+      "title": "New: 5-minute resolution",
+      "description": "Currently experimental. Available at no additional cost while we gather feedback and refine the functionality."
     },
     "feedbackCta": "Leave feedback"
   },
