--- a/web/src/locales/pl.json
+++ b/web/src/locales/pl.json
@@ -186,56 +186,64 @@
   },
   "country-history": {
     "carbonintensity": {
-      "72h": "Godzinowa intensywność węglowa",
+      "24h": "Intensywność węglowa",
+      "72h": "Intensywność węglowa",
       "3mo": "Dzienne intensywność węglowa",
       "12mo": "Miesięczna intensywność węglowa",
       "all_months": "Miesięczna intensywność węglowa",
       "all_years": "Roczna intensywność węglowa"
     },
     "emissions": {
-      "72h": "Godzinowe emisje dwutlenku węgla",
+      "24h": "Emisje dwutlenku węgla",
+      "72h": "Emisje dwutlenku węgla",
       "3mo": "Dzienne emisje dwutlenku węgla",
       "12mo": "Miesięczne emisje dwutlenku węgla",
       "all_months": "Miesięczne emisje dwutlenku węgla",
       "all_years": "Roczne emisje dwutlenku węgla"
     },
     "emissionsorigin": {
-      "72h": "Godzinowe pochodzenie emisji dwutlenku węgla",
+      "24h": "Pochodzenie emisji dwutlenku węgla",
+      "72h": "Pochodzenie emisji dwutlenku węgla",
       "3mo": "Dzienne pochodzenie emisji dwutlenku węgla",
       "12mo": "Miesięczne pochodzenie emisji dwutlenku węgla",
       "all_months": "Miesięczne pochodzenie emisji dwutlenku węgla",
       "all_years": "Roczne pochodzenie emisji dwutlenku węgla"
     },
     "emissionsproduction": {
-      "72h": "Godzinowe emisje z produkcji",
+      "24h": "Emisje z produkcji",
+      "72h": "Emisje z produkcji",
       "3mo": "Dzienne emisje z produkcji",
       "12mo": "Miesięczne emisje z produkcji",
       "all_months": "Miesięczne emisje z produkcji",
       "all_years": "Roczne emisje z produkcji"
     },
     "electricityorigin": {
-      "72h": "Godzinowe pochodzenie energii elektrycznej",
+      "24h": "Pochodzenie energii elektrycznej",
+      "72h": "Pochodzenie energii elektrycznej",
       "3mo": "Dzienne pochodzenie energii elektrycznej",
       "12mo": "Miesięczne pochodzenie energii elektrycznej",
       "all_months": "Miesięczne pochodzenie energii elektrycznej",
       "all_years": "Roczne pochodzenie energii elektrycznej"
     },
     "electricityproduction": {
-      "72h": "Godzinowa produkcja energii elektrycznej",
+      "24h": "Produkcja energii elektrycznej",
+      "72h": "Produkcja energii elektrycznej",
       "3mo": "Dzienne produkcja energii elektrycznej",
       "12mo": "Miesięczna produkcja energii elektrycznej",
       "all_months": "Miesięczna produkcja energii elektrycznej",
       "all_years": "Roczna produkcja energii elektrycznej"
     },
     "electricityprices": {
-      "72h": "Godzinowe ceny energii elektrycznej",
+      "24h": "Ceny energii elektrycznej",
+      "72h": "Ceny energii elektrycznej",
       "3mo": "Dzienne ceny energii elektrycznej",
       "12mo": "Miesięczne ceny energii elektrycznej",
       "all_months": "Miesięczne ceny energii elektrycznej",
       "all_years": "Roczne ceny energii elektrycznej"
     },
     "netExchange": {
-      "72h": "Godzinowa wymiana netto",
+      "24h": "Wymiana netto",
+      "72h": "Wymiana netto",
       "3mo": "Dzienne wymiana netto",
       "12mo": "Miesięczna wymiana netto",
       "all_months": "Miesięczna wymiana netto",
