--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -247,56 +247,64 @@
   },
   "country-history": {
     "carbonintensity": {
-      "72h": "Timvis kolintensitet",
+      "24h": "Kolintensitet",
+      "72h": "Kolintensitet",
       "3mo": "Daglig kolintensitet",
       "12mo": "Månadsvis kolintensitet",
       "all_months": "Månadsvis kolintensitet",
       "all_years": "Årlig kolintensitet"
     },
     "emissions": {
-      "72h": "Timvisa koldioxidutsläpp",
+      "24h": "Koldioxidutsläpp",
+      "72h": "Koldioxidutsläpp",
       "3mo": "Dagliga koldioxidutsläpp",
       "12mo": "Månadsvisa koldioxidutsläpp",
       "all_months": "Månadsvisa koldioxidutsläpp",
       "all_years": "Årliga koldioxidutsläpp"
     },
     "emissionsorigin": {
-      "72h": "Timvis ursprung av koldioxidutsläpp",
+      "24h": "Ursprung av koldioxidutsläpp",
+      "72h": "Ursprung av koldioxidutsläpp",
       "3mo": "Dagligt ursprung av koldioxidutsläpp",
       "12mo": "Månadsvis ursprung av koldioxidutsläpp",
       "all_months": "Månadsvis ursprung av koldioxidutsläpp",
       "all_years": "Årligt ursprung av koldioxidutsläpp"
     },
     "emissionsproduction": {
-      "72h": "Timvisa produktionsutsläpp",
+      "24h": "Produktionsutsläpp",
+      "72h": "Produktionsutsläpp",
       "3mo": "Dagliga produktionsutsläpp",
       "12mo": "Månadsvisa produktionsutsläpp",
       "all_months": "Månadsvisa produktionsutsläpp",
       "all_years": "Årliga produktionsutsläpp"
     },
     "electricityorigin": {
-      "72h": "Timvis elmix",
+      "24h": "Elmix",
+      "72h": "Elmix",
       "3mo": "Dagligt elmix",
       "12mo": "Månadsvis elmix",
       "all_months": "Månadsvis elmix",
       "all_years": "Årligt elmix"
     },
     "electricityproduction": {
-      "72h": "Timvis elmix",
+      "24h": "Elmix",
+      "72h": "Elmix",
       "3mo": "Daglig elmix",
       "12mo": "Månadsvis elmix",
       "all_months": "Månadsvis elmix",
       "all_years": "Årlig elmix"
     },
     "electricityprices": {
-      "72h": "Timvisa elpriser",
+      "24h": "Elpriser",
+      "72h": "Elpriser",
       "3mo": "Dagliga elpriser",
       "12mo": "Månadsvisa elpriser",
       "all_months": "Månadsvisa elpriser",
       "all_years": "Årliga elpriser"
     },
     "netExchange": {
-      "72h": "Timvis elflöde",
+      "24h": "Elflöde",
+      "72h": "Elflöde",
       "3mo": "Daglig elflöde",
       "12mo": "Månadsvis elflöde",
       "all_months": "Månadsvis elflöde",
