--- a/web/src/locales/zh-TW.json
+++ b/web/src/locales/zh-TW.json
@@ -111,56 +111,64 @@
   },
   "country-history": {
     "carbonintensity": {
-      "72h": "每小時碳強度",
+      "24h": "碳強度",
+      "72h": "碳強度",
       "3mo": "每日碳強度",
       "12mo": "每月碳強度",
       "all_months": "每月碳強度",
       "all_years": "每年碳強度"
     },
     "emissions": {
-      "72h": "每小時碳排放",
+      "24h": "碳排放",
+      "72h": "碳排放",
       "3mo": "每日碳排放",
       "12mo": "每月碳排放",
       "all_months": "每月碳排放",
       "all_years": "每年碳排放"
     },
     "emissionsorigin": {
-      "72h": "每小時碳排放來源",
+      "24h": "碳排放來源",
+      "72h": "碳排放來源",
       "3mo": "每日碳排放來源",
       "12mo": "每月碳排放來源",
       "all_months": "每月碳排放來源",
       "all_years": "每年碳排放來源"
     },
     "emissionsproduction": {
-      "72h": "每小時生產排放",
+      "24h": "生產排放",
+      "72h": "生產排放",
       "3mo": "每日生產排放",
       "12mo": "每月生產排放",
       "all_months": "每月生產排放",
       "all_years": "每年生產排放"
     },
     "electricityorigin": {
-      "72h": "每小時電力來源",
+      "24h": "電力來源",
+      "72h": "電力來源",
       "3mo": "每日電力來源",
       "12mo": "每月電力來源",
       "all_months": "每月電力來源",
       "all_years": "每年電力來源"
     },
     "electricityproduction": {
-      "72h": "每小時電力生產",
+      "24h": "電力生產",
+      "72h": "電力生產",
       "3mo": "每日電力生產",
       "12mo": "每月電力生產",
       "all_months": "每月電力生產",
       "all_years": "每年電力生產"
     },
     "electricityprices": {
-      "72h": "每小時電價",
+      "24h": "電價",
+      "72h": "電價",
       "3mo": "每日電價",
       "12mo": "每月電價",
       "all_months": "每月電價",
       "all_years": "每年電價"
     },
     "netExchange": {
-      "72h": "每小時淨交換",
+      "24h": "淨交換",
+      "72h": "淨交換",
       "3mo": "每日淨交換",
       "12mo": "每月淨交換",
       "all_months": "每月淨交換",
