--- a/web/src/locales/cs.json
+++ b/web/src/locales/cs.json
@@ -243,7 +243,7 @@
       "all_years": "Roční energetický mix"
     },
     "electricityproduction": {
-      "24h": "Výroba elektřiny",
+      "24h": "Energetický mix",
       "72h": "Energetický mix",
       "3mo": "Denní energetický mix",
       "12mo": "Měsíční energetický mix",
