Add Turks and Caicos to config and map

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1538,6 +1538,9 @@
     "SZ": {
       "zoneName": "Eswatini"
     },
+    "TC": {
+      "zoneName": "Turks and Caicos Islands"
+    },
     "TD": {
       "zoneName": "Chad"
     },
