--- a/web/src/locales/pl.json
+++ b/web/src/locales/pl.json
@@ -1497,6 +1497,9 @@
     "SY": {
       "zoneName": "Syria"
     },
+    "TC": {
+      "zoneName": "Turks i Caicos"
+    },
     "TF": {
       "zoneName": "Francuskie Terytoria Południowe"
     },
