--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -160,7 +160,7 @@
   "grid-alerts-card": {
     "show-more": "Show more",
     "show-less": "Show less",
-    "experimental-mode": "This is free while in experimental mode",
+    "experimental-mode": "This is free while in the experimental phase",
     "tooltip": "This feature is currently in an experimental phase and available at no additional cost while we gather feedback and refine the functionality."
   },
   "feedback-card": {
