feat(web): add grid alerts to app (#8281)
* first draft current grid alert card left panel

* not showing card if no alerts

also run pnpx prettier@2 --write .

* add grid alerts layer on map

calculate centroid of polygon
show alert icon in centroid for zones where there is an alert with "action" type
create warning icon for the map

* update CurrentGridAlertsCard

remove props not used in CurrentGridAlertsCard

* restyle alert card

format date to show on card
implemented visual configuration of style according to alert type

* fix typecheck errors

* custom warning icon for action

The icon is only showed where there is Action alert in a zone. Warning icon's color depends on carbon intensity color of the zone on the map following the logic in CarbonIntensitySquare.

* Update GridAlertsLayer.tsx

* smaller icons, remove alert type and change datetime format

* WIP

* Everything but truncated text

* change brand yellow

* add message type to zoneMessage

* delete warning icon

* add translations

* modify estimation card to new zonemessage type

* add truncate text, 5 min gran and text with links

* use react icon instead of custom alert icon

* fix type errors

* add experimental disclaimer

* fix icon color

* extract getWarningIconData

* changes based on viktors feedback

* avoid flickering

* Revert "avoid flickering"

This reverts commit 36d98a61ddc6216a3a80e9034a1896d7b0b9a1ee.

* avoid flickering

* Update web/src/locales/en.json

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

* Update web/src/locales/en.json

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

---------

Co-authored-by: Alejandra Navarro <alenavarro1997@gmail.com>
Co-authored-by: Alejandra Navarro Castillo <84456428+alejandranavcas@users.noreply.github.com>
Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -157,6 +157,12 @@
       "now": "Now"
     }
   },
+  "grid-alerts-card": {
+    "show-more": "Show more",
+    "show-less": "Show less",
+    "experimental-mode": "This is free while in the experimental phase",
+    "tooltip": "This feature is currently in an experimental phase and available at no additional cost while we gather feedback and refine the functionality."
+  },
   "feedback-card": {
     "title": "Help us improve!",
     "success-message": "Your response helps us understand and improve the quality of our app.",
