--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -503,7 +503,8 @@
       "zoneName": "Isle of Man"
     },
     "IN": {
-      "zoneName": "Mainland India"
+      "zoneName": "Mainland India",
+      "countryName": "India"
     },
     "IN-EA": {
       "countryName": "India",
