restore translation in en file

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1044,6 +1044,10 @@
       "countryName": "India",
       "zoneName": "Western India"
     },
+    "IN-AN": {
+      "countryName": "India",
+      "zoneName": "Andaman and Nicobar Islands"
+    },
     "IO": {
       "zoneName": "British Indian Ocean Territory"
     },
